tests/ui/borrowck/borrowck-mut-addr-of-imm-var.stderr
error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/borrowck-mut-addr-of-imm-var.rs:3:25
   |
LL |     let y: &mut isize = &mut x;
   |                         ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut x: isize = 3;
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
